# Synapse-OS

./: Cargo.toml  LICENSE
desktop/src/: App.tsx
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/views/: Editor.tsx
