
[workspace]
members = [
    "core",                    # 🤖 Workflow Engine & Core Logic
    "bot",                     # 📱 Telegram Bot Integration
    "desktop/src-tauri",       # 🖥️ Tauri Desktop App
]
resolver = "2"                 # Modern dependency resolution

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Synapse-OS Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/Synapse-OS"
rust-version = "1.75"          # MSRV (Minimum Supported Rust Version)

# Shared dependencies across all crates - versions centralized
[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Cryptography & Security
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
keyring = { version = "2.3", features = ["linux-native", "windows-native", "macos-native"] }
jsonwebtoken = "9.2"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Networking
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
warp = "0.3"                   # For webhook server
teloxide = { version = "0.12", features = ["macros"] }  # Telegram Bot

# AI Integration
ollama-rs = "0.1"              # Local LLM integration
async-openai = "0.18"          # OpenAI/OpenRouter compatibility

# System Integration
sysinfo = "0.30"               # System metrics (CPU, RAM)
notify = "6.1"                 # File system watching
enigo = "0.1"                  # Mouse/Keyboard control (RPA)
headless_chrome = { version = "1.0", default-features = false, features = ["fetch"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
dashmap = "5.5"                # Concurrent HashMap
dashset = "0.1"                # Concurrent HashSet
parking_lot = "0.12"           # Better synchronization primitives
dashmap = "5.5"                # Concurrent HashMap
async-trait = "0.1"
futures = "0.3"
itertools = "0.12"

# Testing
mockall = "0.12"
tempfile = "3.8"

# Build Dependencies
cargo_metadata = "0.18"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3                  # Maximum optimization
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"                    # Link Time Optimization for smaller binary
panic = 'abort'                # Smaller binary size
codegen-units = 1              # Better optimization but slower compile
strip = true                   # Remove debug symbols

[profile.release.build-override]
opt-level = 3
codegen-units = 16

# Fast compile for development testing
[profile.dev-fast]
inherits = "dev"
opt-level = 1                  # Basic optimizations, faster than release
debug = true
